--- a/.github/workflows/markdownlint.yml
+++ b/.github/workflows/markdownlint.yml
@@ -14,7 +14,7 @@ jobs:
       run: sudo apt-get install -y nodejs npm
 
     - name: npm install
-      run: npm i -g markdownlint-cli
+      run: sudo npm i -g markdownlint-cli
 
     - name: markdown lint
       run: markdownlint .
